Security and register changes